--- a/HTML/semantic.html
+++ b/HTML/semantic.html
@@ -80,7 +80,7 @@
 
     <br />
     <!-- Adding an Image from the Local folder -->
-    <img src="2144059.jpg"> 
+    <img src="2144059.jpg"
     alt="Alternative Text from the Image." 
     height="200px" 
     width="300px" />
